fix: align in small screen

--- a/static/hello.css
+++ b/static/hello.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
   font-size: 6vw;
-  font-weight: 600;
+  font-weight: 900;
 }
 
 .text {
@@ -11,13 +11,7 @@
   margin: 0;
   padding: 0;
   font-size: 3vw;
-  font-weight: 360;
-}
-
-.row::after, .row::before {
-  content: '';
-  clear: both;
-  display: table;
+  font-weight: 200;
 }
 
 .main-header {
@@ -68,7 +62,7 @@
 
 .content-main {
   position: relative;
-  width: 100%;
+  width: calc(100vw - 160px);
   max-width: 1200px;
   height: 1200px;
   margin: 0 auto;
@@ -80,14 +74,15 @@
   top: 0;
   right: 0;
   width: 100%;
-  margin: 25px 0;
+  margin-top: 25px;
   padding: 0;
 }
 
 .hello-info {
-  float: left;
-  width: 45%;
+  position: relative;
   display: block;
+  margin-right: auto;
+  width: 60%;
 }
 
 .hello-info .title {
@@ -95,6 +90,7 @@
 }
 
 .hello-info .text {
+  margin-top: 5px;
   font-size: 1.76vw;
   color: white;
 }
@@ -104,28 +100,46 @@
   bottom: 0;
   right: 0;
   margin-right: 0;
-  margin-left: 8%;
-  width: 40%;
-  display: block;
-  float: left;
 }
 
-.signin-button {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  margin: 0;
-  padding: 0;
+#signin-button {
+  position: relative;
+  margin-top: auto;
 }
 
 ul {
   list-style-type: none;
-  margin: 0;
   padding: 0;
+}
+
+li {
+  margin-top: 20px;
+  line-height: 2;
 }
 
 .main-footer {
   height: 300px;
   z-index: 1;
   background: rgba(255, 255, 255, 0.9);
+}
+
+@media (max-width: 820px) {
+  .col {
+    position: relative !important;
+    padding: 10px 0 !important;
+    display: block !important;
+    width: 100% !important;
+    bottom: auto !important;
+    top: auto !important;
+    left: auto !important;
+    right: auto !important;
+  }
+
+  .title, li.title, .hello-info.title {
+    font-size: 6vw !important;
+  }
+
+  .text {
+    font-size: 4vw !important;
+  }
 }
